--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5050
 
-CONNECTION_STRING = postgres://pokerumble_user:MrlTyfPvWIaDkcvaPdALcXuJjfSFPvEl@dpg-cj2o9998g3n1jkgmua5g-a.oregon-postgres.render.com/pokerumble
+CONNECTION_STRING = postgres://Hokage32:6MgyvJ9YqiDQ@ep-blue-field-63939321.us-east-2.aws.neon.tech/neondb
