--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "poke-rumble",
   "version": "0.1.0",
   "proxy": "http://localhost:5050",
+  "main": "server/index.js",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
